--- a/Project/index.html
+++ b/Project/index.html
@@ -37,13 +37,19 @@
                     trabalho.
                 </p>
                 <div class="apresentacao__link">
-                <a class="apresentacao__links_link" href="https://www.linkedin.com/in/leandro-lara-209445a9/">Linkedin
+                    <h2 class="apresentacao__links__subtitulo">Acesse minhas redes: </h2>
+                <a class="apresentacao__links_link" href="https://www.linkedin.com/in/leandro-lara-209445a9/">
+                    <img src="./assets/linkedin.png" alt="Linkedin">
+                    Linkedin
                 </a>
-                <a class="apresentacao__links_link" href="https://github.com/LeandroSilvaLara">Githube </a>
+                <a class="apresentacao__links_link" href="https://github.com/LeandroSilvaLara">
+                    <img src="./assets/github.png">
+                    Githube 
+                </a>
             </div>
             </section>
-            <img class="imgem" src="leandro.jpg" alt="img_leandro">
+            <img class="imgem" src="./assets/leandro.jpg" alt="img_leandro">
         </main>
         <footer></footer>
     </body>
-</html>[]
+</html>
