--- a/Project/index.html
+++ b/Project/index.html
@@ -3,11 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="./styles/style.css">
         <title>Portfolio</title>
     </head>
     <body>
-        <header></header>
+        <header class="cabecalho">
+            <nav class="cabecalho__menu">
+                <a class="cabecalho__menu__link" href="index.html">Home</a>
+                <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+            </nav>
+        </header>
         <main class="apresentacao">
             <section class="apresentacao__conteudo">
                 <h1 class="apresentacao__conteudo__titulo">
@@ -35,7 +40,7 @@
                     as tecnologias Android, Kotlin e Java. Sou reconhecido pela
                     minha criatividade e gosto de aplicá-la nos projetos em que
                     trabalho.
-                </p>
+                </p> 
                 <div class="apresentacao__link">
                     <h2 class="apresentacao__links__subtitulo">Acesse minhas redes: </h2>
                 <a class="apresentacao__links_link" href="https://www.linkedin.com/in/leandro-lara-209445a9/">
@@ -50,6 +55,8 @@
             </section>
             <img class="imgem" src="./assets/leandro.jpg" alt="img_leandro">
         </main>
-        <footer></footer>
+        <footer class="rodape">
+            <p>Desenvolvido por Leandro.</p>
+        </footer>
     </body>
 </html>
