--- a/Project/about.html
+++ b/Project/about.html
@@ -20,7 +20,7 @@
             </p>
             <p class="apresentacao__conteudo_texto">Tenho experiência como Desenvolvedor Android e sou apaixonado por novas tecnologias, sempre buscando estar atualizado. Tenho três anos de experiência em desenvolvimento Android, utilizando as linguagens Java e Kotlin. Atualmente, estou trabalhando na empresa Fóton Informática S.A como Desenvolvedor Mobile Pleno, utilizando as tecnologias Android, Kotlin e Java. Sou reconhecido pela minha criatividade e gosto de aplicá-la nos projetos em que trabalho.</p>
         </section>
-        <img src="./assets/sobreLeandro.jpg" alt="Foto do Leandor Lara Programador">
+        <img class="apresentacao__imgem" src="./assets/sobreLeandro.jpg" alt="Foto do Leandor Lara Programador">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Leandro.</p>
