--- a/Project/index.html
+++ b/Project/index.html
@@ -43,17 +43,17 @@
                 </p> 
                 <div class="apresentacao__link">
                     <h2 class="apresentacao__links__subtitulo">Acesse minhas redes: </h2>
-                <a class="apresentacao__links_link" href="https://www.linkedin.com/in/leandro-lara-209445a9/">
+                    <a class="apresentacao__links_navegacao" href="https://www.linkedin.com/in/leandro-lara-209445a9/">
                     <img src="./assets/linkedin.png" alt="Linkedin">
                     Linkedin
                 </a>
-                <a class="apresentacao__links_link" href="https://github.com/LeandroSilvaLara">
+                <a class="apresentacao__links_navegacao" href="https://github.com/LeandroSilvaLara">
                     <img src="./assets/github.png">
                     Githube 
                 </a>
             </div>
             </section>
-            <img class="imgem" src="./assets/leandro.jpg" alt="img_leandro">
+            <img class="apresentacao__imgem" src="./assets/leandro.jpg" alt="img_leandro">
         </main>
         <footer class="rodape">
             <p>Desenvolvido por Leandro.</p>
