--- a/arquitetura-css-assets/index.html
+++ b/arquitetura-css-assets/index.html
@@ -49,7 +49,7 @@
             </nav>
         </header>
         <section class="banner">
-            <img class="banner__imagem" src="./assets/img/banner.jpg" alt />
+            <div class="banner__imagem" src="./assets/img/banner.jpg" alt></div>
             <h1 class="banner__titulo">Reaproveite melhor os alimentos!</h1>
         </section>
         <section class="sobre">
