--- a/arquitetura-css-assets/index.html
+++ b/arquitetura-css-assets/index.html
@@ -34,6 +34,8 @@
         <link rel="stylesheet" href="./assets/css/pessoas/pessoa-nome.css">
         <link rel="stylesheet" href="./assets/css/pessoas/pessoa.imagem.css">
         <link rel="stylesheet" href="./assets/css/pessoas/pessoa-funcao.css">
+        <link rel="stylesheet" href="./assets/css/rodape.css">
+        <link rel="stylesheet" href="./assets/css/logo.css">
     </head>
     <body>
         <header class="cabecalho">
@@ -142,5 +144,8 @@
                 </div>
             </div>
         </section>
+        <footer class="rodape">
+            Contato: exemplo@email.com.br
+        </footer>
     </body>
 </html>
