--- a/Front_End_Rocketseat/Treine/index.html
+++ b/Front_End_Rocketseat/Treine/index.html
@@ -1,39 +1,59 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treine me</title>
-</head>
-<body>
 
-<div class="page">
-    <header>
-        <img src="images/logo.svg" alt="Treine.me">
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Sobre</li>
-                <li>Treinar</li>
-            </ul>
-        </nav>
-    </header>
-    <main>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
-        <section class="text">
-            <h1>Treinos exclusivos para você!</h1>
-            <p>Nós criamos treinos<strong> exclusívos e únicos para você.</strong><br/>
-            Investa no seu corpo <strong> muito mais performance e qualidade de vida</strong></p>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+ 
+    <div class="page">
+
+      <nav>
+        <a id="logo" href="#">
+          <img src="images/logo.svg" alt="Treine.me">
+        </a>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Treinar</a></li>
+        </ul>
+      </nav>
+
+      <main>
+
+        <section>
+          <h1>Treinos <span>exclusivos</span>
+            para você!</h1>
+
+          <p>
+            Nós criamos treinos <strong>exclusívos e únicos para você.</strong><br/>
+            Invista no seu corpo e <strong>tenha muito mais performance</strong> e qualidade de vida.
+          </p>
+
+          <button>
+            <img src="images/whatsapp%201.svg" alt="ícone do whatsapp">
+            Comece já
+          </button>
         </section>
 
-        <button>
-            <img src="images/whatsapp%201.svg" alt="ícone do whatsapp">
-            Comece ká
-        </button>
-
         <img src="images/fitness-jump.png" alt="Desenho de uma mulher pulando corda numa academia">
-    </main>
-    <footer></footer>
+        
+      </main>
+      <footer>
+        fale concosco no instagram 
+        <a href="https://instagram.com/treineme" target="_blank">@treine.me</a>
+      </footer>
+    </div>
 
-</div>
-</body>
+    <img src="images/balls-decoration.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página.">
+
+  </body>
 </html>
