--- a/Front_End_Rocketseat/Treine/index.html
+++ b/Front_End_Rocketseat/Treine/index.html
@@ -53,7 +53,7 @@
       </footer>
     </div>
 
-    <img src="images/balls-decoration.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página.">
+    <img id="balls" src="images/balls-decoration.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página.">
 
   </body>
 </html>
